--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Telefon 041 819 25 41<br/>
       <h2>Themabeschreibung</h2>
       <h1>Richtplan, kantonal (A084)</h1>
       <ul id="Verzeichnis">
-        <li><a href="https://ch-sz-geo.github.io/A084/docs/modelldokumentation.html" target="_blank">Modelldokumentation</a> (im Aufbau)</li>
+        <li><a href="https://ch-sz-geo.github.io/A084/docs/modelldokumentation.html" target="_blank">Modelldokumentation</a></li>
         <!--<li><a href="https://ch-sz-geo.github.io/A084/docs/erfassungsrichtlinien.html" target="_blank">Erfassungsrichtlinien</a></li>-->
         <li><a href="https://github.com/ch-sz-geo/A084/tree/main/models" target="_blank">Modelle</a></li>
         <li><a href="https://github.com/ch-sz-geo/A084/tree/main/data" target="_blank">Daten</a> (im Aufbau)</li>
