--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ Telefon 041 819 25 41<br/>
       <ul id="Verzeichnis">
         <li><a href="https://ch-sz-geo.github.io/A084/docs/modelldokumentation.html" target="_blank">Modelldokumentation</a></li>
         <!--<li><a href="https://ch-sz-geo.github.io/A084/docs/erfassungsrichtlinien.html" target="_blank">Erfassungsrichtlinien</a></li>-->
-        <li><a href="https://github.com/ch-sz-geo/A084/tree/main/models" target="_blank">Modelle</a></li>
-        <li><a href="https://github.com/ch-sz-geo/A084/tree/main/data" target="_blank">Daten</a> (im Aufbau)</li>
+        <li><a href="https://github.com/ch-sz-geo/A084/tree/main/models" target="_blank">Modell</a></li>
+        <li><a href="https://github.com/ch-sz-geo/A084/tree/main/data" target="_blank">Daten</a></li>
       </ul>
 Das könnte Sie auch interessieren:
       <ul id="Verzeichnis">
